- Added Superhero ACL view - Managers must reauthenticate before they can change anything - Displaying an empty page (temporary) where manager access control will happen